fix styling for some hard to read text and fixed responsiveness of header

--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@ main {
 
 /* brand color palette */
 :root {
-  --primary: rgb(242, 5, 5);
-  --secondary: rgb(242, 34, 51);
-  --tertiary: rgba(89, 89, 89, 1);
-  --dark: rgba(13, 13, 13, 1);
-  --light: rgba(217, 217, 217, 1);
+  --primary: #CC001F;
+  --secondary: #637074;
+  --tertiary: #828a95;
+  --dark: #08090c;
+  --light: #FFF7F8;
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
   --spacing-five: calc(2.5rem);
@@ -32,7 +32,7 @@ body {
   font-size: 18px;
   letter-spacing: 0.1em;
   background: var(--dark);
-  color: var(--light);
+  color: var(--primary);
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -96,7 +96,7 @@ header {
 }
 
 header a {
-  color: var(--light);
+  color: var(--primary);
 }
 
 button {
@@ -109,7 +109,7 @@ button {
   outline: none;
   cursor: pointer;
   margin: 0 1px;
-  background-color: var(--dark);
+  background-color: var(--tertiary);
   padding: 10px 15px;
   opacity: 0.7;
 }
@@ -161,15 +161,17 @@ li {
 }
 
 header {
-  height: 200px;
+  height: 15%;
   position: relative;
   overflow: hidden;
   z-index: 2;
+  align-items: center;
 }
 
 header h1 {
   position: relative;
   z-index: 2;
+  padding-left: 30px;
 }
 
 header img {
@@ -178,15 +180,14 @@ header img {
   top: 0;
   left: 0;
   height: 125%;
-  width: 100%;
-  /*filter: sepia(1) opacity(60%);*/
+  width: 125%;
+  filter: opacity(60%);
 }
 
 nav {
-  position: relative;  
+  position: relative;
   font-size: 1.5rem;
   margin: 30px 10px;
-  align-items: center;
 }
 
 nav a:hover {
@@ -194,9 +195,26 @@ nav a:hover {
 }
 
 nav li {
+  text-decoration: none;
+  padding: 5px 10px;
+  color: var(--light);
+  margin-right: 10px;
+  background-image: linear-gradient(270deg, var(--primary) 0%, var(--light) 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: bottom;
+  transition: all 0.25s ease-in;
+  font-size: 1.4rem;
   cursor: pointer;
-  text-shadow: 2px 2px 10px rgba(0,0,0, 0.5);
-  margin: 0 15px;
+}
+
+nav li:hover {
+  background-size: 100% 100%;
+  color: var(--dark);
+}
+
+nav li:last-child {
+  margin-right: 0;
 }
 
 ul.skills {
@@ -205,6 +223,7 @@ ul.skills {
 
 ul.skills li {
   list-style-type: circle;
+  color: var(--light);
 }
 
 .headshot {
@@ -218,7 +237,7 @@ footer {
 }
 
 footer a {
-  color: var(--light);
+  color: var(--primary);
   opacity: .5;
   margin: 10px 20px;
   transition: all .3s ease-in-out;
@@ -226,7 +245,7 @@ footer a {
 
 footer a:hover {
   opacity: 1;
-  color: var(--secondary);
+  color: var(--light);
 }
 
 textarea {
@@ -323,10 +342,11 @@ textarea {
   position: relative;
   width: 100%;
   height: 100%;
+  filter: opacity(75%)
 }
 
 .project-text {
-    color: var(--secondary);
+    color: var(--light);
     position: absolute;
     top: 0px;
     bottom: 0px;
@@ -339,7 +359,7 @@ textarea {
 }
 
 .project-text:hover {
-  background-color: var(--alpha);
+  background-color: var(--secondary);
   opacity: 1;
   border: 10px solid var(--secondary);
 }
@@ -356,11 +376,11 @@ textarea {
 }
 
 .project-text a:hover {
-  color: var(--darker);
+  color: var(--dark);
 }
 
 .navActive {
-  color: var(--secondary);
+  color: var(--primary);
   cursor: default;
   text-shadow: 3px 3px 15px rgba(255,255,255, .5);
 }
